sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:6: error: value &&! is not a member of Boolean
  while(i < max-1 &&!permute){
                  ^AlgBubbleSort3:19: error: value ++ is not a member of Int
  i++;
   ^