sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  {
  var max = getNombreValeurs();
  var i =0;
  var permute = false;
  while(i < max-1 &&!permute){
    var count = max-1;
     permute = false;
    while(count > i+1){
       var a = getValeur(count);
      var b = getValeur(count-1);
      if(a<b){
        echange(count,count-1);
        permute = true;
      }
      count +=1;
      
    }
	i++;
  }
}